[gd_scene load_steps=9 format=2]

[ext_resource path="res://core/player/PlayerCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://core/DialogueBehavior.tscn" type="PackedScene" id=2]
[ext_resource path="res://core/player/PlayerSkinSick.tscn" type="PackedScene" id=3]
[ext_resource path="res://core/player/PlayerBehavior.tscn" type="PackedScene" id=5]
[ext_resource path="res://core/player/Player.gd" type="Script" id=6]
[ext_resource path="res://core/player/PlayerSave.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
height = 12.0

[sub_resource type="CapsuleShape2D" id=2]
height = 12.0

[node name="PlayerSick" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="PlayerCamera" parent="." instance=ExtResource( 1 )]

[node name="PlayerBehavior" parent="." instance=ExtResource( 5 )]

[node name="DialogueBehavior" parent="." instance=ExtResource( 2 )]

[node name="PlayerSave" parent="." instance=ExtResource( 7 )]

[node name="PlayerSkin" parent="." instance=ExtResource( 3 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
